trouva-design-system/css/main.css
/*FONTS*/

@font-face {
    font-family: 'Core-Sans-Heavy';
  	src: url('../fonts/core-sans/core-sans.woff2') format('woff2');
  	font-style: normal;
  	font-weight: normal;
}
@font-face {
    font-family: 'Circular-Bold';
    src: url('../fonts/circular/lineto-circular-bold.woff') format('woff'),
       url('../fonts/circular/lineto-circular-bold.woff2') format('woff2');
  	font-style: normal;
  	font-weight: normal;
}
@font-face {
    font-family: 'Circular-Book';
  	src: url('../fonts/circular/lineto-circular-book.woff') format('woff'),
       url('../fonts/circular/lineto-circular-book.woff2') format('woff2');
  	font-style: normal;
  	font-weight: normal;
}

/*COLOUR VARIABLES*/

:root {
    --navy:#242038;
    --navy75:#5F5C6E;
    --aqua:#48A9A6;
    --navy50:#9B99A4;
    --navy10:#EBEAEC;
    --white:#FFFFFF;
}

/*BASE STYLES*/

body{
	width: 100%;
	margin: 0 auto;
	text-rendering: optimizelegibility;
	-webkit-font-smoothing: antialiased;
	font-size: 16px;
}
.container-full-width{
	padding: 24px;
	width: 100%;
}
.container-navy{
	background-color: var(--navy);
}
.container-white{
	background-color: var(--white);
}
hr{
	height: 1px;
	border: none;
	background-color: var(--navy50);
	opacity: .2;
	margin-bottom: 40px;
	margin-top: 40px;
	padding: 0;
}

@media only screen and (min-width: 1024px) {
	.container-full-width{
		padding: 48px;
	}
	.container-fixed-width{
		width: 60%;
		margin: 0 auto;
	}
}

/*HEADER*/
.title{
	margin-bottom: 32px;
	display: table;
}
.title a{
	text-decoration: none;
}
.title div,
.title h2{
	display: table-cell;
    vertical-align: middle;
    color: var(--white);
}
.title img{
	width: 24px;
	margin-right: 16px;
}
.header{
	width: 100%;
}

@media only screen and (min-width: 1024px){
	.header{
		width: 50%;
	}
}

/*NAV*/
nav{
	width: 100%;
}
.sub-nav{
	width: 100%;
	margin-bottom: 32px;
	margin-top: 32px;
}
nav div,
.sub-nav div{
	display: table;
	font-family: 'Circular-Book';
	margin-right: 16px;
	padding-bottom: 3px;
	margin-bottom: 16px;
}
nav div a{
	color: var(--white);
	text-decoration: none;
}
.sub-nav div a{
	color: var(--navy);
	text-decoration: none;
}
nav div.nav-selected,
nav div:hover{
	border-bottom: 1px solid var(--white);
}
.sub-nav div.nav-selected,
.sub-nav div:hover{
	border-bottom: 1px solid var(--navy);
}

@media only screen and (min-width: 1024px) {
	nav div,
	.sub-nav div{
		display: inline-block;
		margin-bottom: 0;
	}
}

/*SECTION STYLES*/

section{
	margin-bottom: 64px;
}
.section-title{
	color: var(--navy50);
	font-family: 'Core-Sans-Heavy';
	font-size: 16px;
	text-transform: uppercase;
	padding: 0;
	margin-bottom: 32px;
	font-weight: normal;
	border-bottom: 1px solid;
}

/*TYPOGRAPHY LAYOUT*/

.font-container{
 	width: 100%;
 	margin-bottom: 32px;
 	padding-bottom: 32px;
}
.font-column{
	width: 100%;
}
.layout-annotation{
	width: 100%;
	color: #1c89d5;
	background-color: #f3f9fd;
	padding: 16px;
    display: inline-block;
    font-family: "Inconsolata", monospace, sans-serif;
    font-size: 14px;
    line-height: 20px;
    margin-top: 24px;
}

@media only screen and (min-width: 1024px) {
	.font-column{
		width: 33.33%;
		float: left;
	}
	.layout-annotation{
		width: 30%;
		float: left;
		margin-left: 76px;
		margin-top: 0;
	}
} 

/*TYPOGRAPHY STYLES*/

/*HEADER LARGE*/
h1, .header-large {
    color: var(--navy);
    font-family: 'Circular-Bold';
    font-size: 30px;
    line-height: 38px;
}
.header-large-universal{
	font-family: 'Core-Sans-Heavy';
	text-transform: uppercase;
	margin-bottom: 8px;
}
.header-large-1 {
	font-family: 'Circular-Book';
    font-size: 40px;
    line-height: 50px;
}
.header-large-2 {
	font-family: 'Circular-Bold';
    font-size: 30px;
    line-height: 38px;
}
.header-large-3 {
	font-family: 'Circular-Book';
    font-size: 30px;
    line-height: 38px;
    text-transform: uppercase;
}
.header-large-4 {
	font-family: 'Circular-Bold';
    font-size: 28px;
    line-height: 35px;
}
.header-large-5 {
	font-family: 'Circular-Book';
    font-size: 28px;
    line-height: 35px;
}

/*HEADER-MEDIUM*/
h2, .header-medium{
	color: var(--navy);
	font-family: 'Circular-Book';
	font-size: 22px;
    line-height: 33px;
}
.header-medium-1 {
	font-family: 'Circular-Book';
    font-size: 26px;
    line-height: 39px;
}
.header-medium-2 {
	font-family: 'Circular-Bold';
    font-size: 22px;
    line-height: 27px;
    text-transform: uppercase;
}
.header-medium-3 {
	font-family: 'Circular-Book';
    font-size: 22px;
    line-height: 33px;
}

/*HEADER-SMALL*/
h3, .header-small{
	color: var(--navy);
	font-family: 'Circular-Book';
	font-size: 18px;
    line-height: 29px;
}
.header-small-1{
	font-family: 'Circular-Bold';
	font-size: 18px;
    line-height: 23px;
}
.header-small-2{
	font-family: 'Circular-Book';
	font-size: 18px;
    line-height: 29px;
    text-transform: uppercase;
}
.header-small-3{
	font-family: 'Circular-Book';
	font-size: 18px;
    line-height: 22px;
}
.header-small-4{
	font-family: 'Circular-Bold';
	font-size: 16px;
	line-height: 22px;
	text-transform: uppercase;
}

/*BODY COPY*/
p, .body-copy{
	color: var(--navy);
	font-family: 'Circular-Book';
	font-size: 14px;
	line-height: 20px;
}
.body-copy-1{
	font-family: 'Circular-Book';
	font-size: 16px;
	line-height: 22px;
}
.body-copy-2{
	font-family: 'Circular-Book';
	font-size: 15px;
	line-height: 21px;
}
.body-copy-3{
	font-family: 'Circular-Bold';
	font-size: 14px;
	line-height: 20px;
}
.body-copy-4{
	font-family: 'Circular-Book';
	font-size: 14px;
	line-height: 50px;
	text-transform: uppercase;
}
.body-copy-5{
	font-family: 'Circular-Book';
	font-size: 14px;
	line-height: 34px;
}
.body-copy-6{
	font-family: 'Circular-Book';
	font-size: 14px;
	line-height: 18px;
	font-style: italic;
}

/*SMALL BODY COPY*/
.body-copy-small{
	color: var(--navy);
	font-family: 'Circular-Book';
	font-size: 12px;
	line-height: 18px;
	text-transform: uppercase;
}
.body-copy-small-1{
	font-family: 'Circular-Bold';
	font-size: 13px;
	line-height: 16px;
	text-transform: none;
}
.body-copy-small-2{
	font-family: 'Circular-Book';
	font-size: 13px;
	line-height: 18px;
	text-transform: uppercase;
}
.body-copy-small-3{
	font-family: 'Circular-Bold';
	font-size: 12px;
	line-height: 18px;
	text-transform: none;
}
.body-copy-small-4{
	font-family: 'Circular-Book';
	font-size: 12px;
	line-height: 48px;
	text-transform: uppercase;
}
.body-copy-small-5{
	font-family: 'Circular-Book';
	font-size: 12px;
	line-height: 28px;
	text-transform: none;
}
.body-copy-small-6{
	font-family: 'Circular-Book';
	font-size: 11px;
	line-height: 20px;
	text-transform: uppercase;
}
.body-copy-small-7{
	font-family: 'Circular-Bold';
	font-size: 10px;
	line-height: 13px;
	text-transform: uppercase;
}
.body-copy-small-8{
	font-family: 'Circular-Book';
	font-size: 10px;
	line-height: 15px;
	text-transform: uppercase;
}
.body-copy-small-9{
	font-family: 'Circular-Book';
	font-size: 9px;
	line-height: 11px;
	text-transform: uppercase;
}

/*COLOURS*/

/*.color-container{
	display: block;
}
.color{
	height: 40px;
  	width: 40px;
  	border-radius: 50%;
  	display: inline-block;
  	float: left;
}
.color-label{
	float: left;
	line-height: 40px;
	margin-left: 16px;
}
.navy{
	background-color: var(--navy);
}
.navy75{
	background-color: var(--navy75);
}
.aqua{
	background-color: var(--aqua);
}
.navy10{
	background-color: var(--navy10);
}
*/
/*	<--CLEARFIX-->*/

.clearfix:after { 
	visibility: hidden; 
	display: block; 
	font-size: 0; 
	content: " "; 
	clear: both; 
	height: 0; 
}

